<resources>
    <string name="app_name">Indonesian Prayer Time</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="asr">Asr</string>
    <string name="gregorian">Gregorian</string>
    <string name="hijri">Hijri</string>
    <string name="today">Today</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="ayat">\'Sesungguhnya salat itu adalah kewajiban yang ditentukan waktunya atas orang-orang yang beriman
        - 04:103\'
    </string>
    <string name="imsak">Imsak</string>
</resources>
