<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.MainActivity">

        <HorizontalScrollView
            android:id="@+id/scroll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.chip.ChipGroup
                android:id="@+id/chip_countries"
                app:singleLine="true"
                android:layout_marginBottom="@dimen/_8sdp"
                app:singleSelection="true"
                android:layout_width="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_height="wrap_content" android:layout_marginTop="16dp">
            </android.support.design.chip.ChipGroup>
        </HorizontalScrollView>

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:padding="8dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scroll"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_location"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_30sdp" android:layout_height="30dp"/>
                <TextView
                    android:id="@+id/tv_recent_country"
                    android:textSize="@dimen/_16sdp"
                    android:paddingTop="@dimen/_16sdp"
                    android:paddingBottom="@dimen/_16sdp"
                    tools:text="Jakarta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_schedule"
            android:padding="8dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:padding="@dimen/_8sdp"
                android:layout_margin="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_centerInParent="true"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:padding="@dimen/_8sdp"
                        android:layout_margin="@dimen/_8sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/img_calendar"
                            android:src="@drawable/img_calendar"
                            android:layout_alignParentTop="true"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"/>
                        <TextView
                            android:id="@+id/tv_calendar"
                            tools:text="Sabtu, 20-02-2019"
                            android:layout_toRightOf="@id/img_calendar"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="@dimen/_16sdp"
                            android:textSize="@dimen/_14sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_16sdp"
                            android:layout_toEndOf="@id/img_calendar"/>

                    </RelativeLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_margin="@dimen/_8sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_fajr"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/fajr"
                            android:layout_weight="2"
                            android:gravity="start"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tv_fajr_time"
                            android:padding="@dimen/_8sdp"
                            android:textAllCaps="true"
                            tools:text="05.00 AM"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <View
                        android:id="@+id/view1"
                        android:background="@android:color/darker_gray"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:layout_width="match_parent" android:layout_height="0.5dp"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_margin="@dimen/_8sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_shurooq"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/shurooq"
                            android:layout_weight="2"
                            android:gravity="start"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tv_shurooq_time"
                            android:padding="@dimen/_8sdp"
                            android:textAllCaps="true"
                            tools:text="06.00 AM"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <View
                        android:id="@+id/view2"
                        android:background="@android:color/darker_gray"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:layout_width="match_parent" android:layout_height="0.5dp"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_margin="@dimen/_8sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_dhuhr"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/dhuhr"
                            android:layout_weight="2"
                            android:gravity="start"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tv_dhuhr_time"
                            android:padding="@dimen/_8sdp"
                            android:textAllCaps="true"
                            tools:text="05.00 AM"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <View
                        android:id="@+id/view3"
                        android:background="@android:color/darker_gray"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:layout_width="match_parent" android:layout_height="0.5dp"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_margin="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_asr"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/asr"
                            android:layout_weight="2"
                            android:gravity="start"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tv_asr_time"
                            android:padding="@dimen/_8sdp"
                            android:textAllCaps="true"
                            tools:text="06.00 AM"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <View
                        android:id="@+id/view4"
                        android:background="@android:color/darker_gray"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:layout_width="match_parent" android:layout_height="0.5dp"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_margin="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_maghrib"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/maghrib"
                            android:layout_weight="2"
                            android:gravity="start"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tv_maghrib_time"
                            android:padding="@dimen/_8sdp"
                            tools:text="05.00 AM"
                            android:textAllCaps="true"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <View
                        android:id="@+id/view5"
                        android:background="@android:color/darker_gray"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:layout_width="match_parent" android:layout_height="0.5dp"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_margin="@dimen/_8sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_isha"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/isha"
                            android:layout_weight="2"
                            android:gravity="start"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tv_isha_time"
                            android:padding="@dimen/_8sdp"
                            android:textAllCaps="true"
                            tools:text="06.00 AM"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</ScrollView>